@@ -1,4 +1,5 @@
 2003-01-27 1.2.04 Jeekay
+* Fixed help to display right options for REHASH
 * Bumped version to 1.2.04
 
 2003-01-15 1.2.03 Jeekay
